# Experience

./: .gitignore  README.md
Final/: .gitignore  CMakeLists.txt  FindGfxLibs.cmake  README.md  checklist.md  createObjects.txt  wisdom.md
Final/HTML/: index.css  index.html
Final/levels/: base.txt  credit.txt  desert.txt  duneLVL.txt  fogtest.txt  forest.txt  level1.txt  level1_backup.txt  level2.txt  level3.txt  level_example.txt  lighttest.txt  notetest.txt  out.txt  parttest.txt  sndtest.txt  street.txt  test.txt  test2.txt
Final/resources/Sponza-master/: Sponza-master.textClipping
Final/resources/models/: andre.fbx
Final/resources/models/animals/: bear.fbx  boar.fbx  deer_1.fbx  deer_2.fbx  fox.fbx  hedhog.fbx  owl.fbx  rabbit.fbx  squirrel.fbx  wolf.fbx
Final/resources/models/grass/: grass_1.fbx  grass_2.fbx  grass_3.fbx  grass_4.fbx  grass_5.fbx  grass_6.fbx  grass_7.fbx  grass_8.fbx  grass_9.fbx
Final/resources/models/trees/: tree_1.fbx  tree_2.fbx  tree_3.fbx  tree_4.fbx  tree_5.fbx
Final/resources/testing/: skull.mtl
Final/shaders/: basic_vert.glsl  bloom_frag.glsl  blur_frag.glsl  blur_vert.glsl  bound_frag.glsl  cubemap_frag.glsl  curs_frag.glsl  curs_vert.glsl  depth_vert.glsl  height_frag.glsl  height_vert.glsl  light_frag.glsl  light_vert.glsl  material_frag.glsl  material_vert.glsl  note_frag.glsl  note_vert.glsl  part_frag.glsl  shadow_frag.glsl  shadow_vert.glsl  sun_frag.glsl  terrain_frag.glsl  terrain_vert.glsl  texture_frag.glsl  texture_vert.glsl  trans_frag.glsl  water_frag.glsl  water_vert.glsl
Final/src/: .main.cpp.swp  Particle.cpp  Particle.h  ParticleSys.cpp  ParticleSys.h  boundary.h  camera.h  cursor.h  frustum.h  heightmap.h  level.h  light.h  main.cpp  manager.h  mesh.h  model.h  note.h  object.h  particles.h  shadow.h  shape.h  skybox.h  sound.h  spline.h  sun.h  terrain.h  text.h  trans.h  water.h
workshop1/: CMakeLists.txt
(+41 files in other folders)
